change password from settings

--- a/resources/lang/hi.json
+++ b/resources/lang/hi.json
@@ -200,6 +200,7 @@
     "This field is displayed as individual record title": "इस क्षेत्र को व्यक्तिगत रिकॉर्ड शीर्षक के रूप में प्रदर्शित किया जाता है",
     "This is your first login. Please change your password": "यह आपका पहला लॉगिन है। कृपया अपना पासवर्ड बदलें",
     "This password reset token is invalid.": "यह पासवर्ड रीसेट टोकन अमान्य है।",
+    "Time Zone": "समय क्षेत्र",
     "Title": "शीर्षक",
     "Title for the Module": "मॉड्यूल के लिए शीर्षक",
     "To": "तक",
