change password messages updated and fixed for redirection, change password locales updated, bug fixes

--- a/resources/lang/hi.json
+++ b/resources/lang/hi.json
@@ -15,7 +15,7 @@
     "Backup creation failed": "बैकअप निर्माण विफल रहा",
     "Backup deleted successfully": "बैकअप सफलतापूर्वक हटा दिया गया",
     "Backups": "बैकअप",
-    "Backups are not enabled. Please enable it from Settings": "बैकअप सक्षम नहीं हैं। कृपया इसे समायोजन से सक्षम करें",
+    "Backups are not enabled. Please enable it from Settings": "बैकअप सक्षम नहीं हैं। कृपया इसे सेटिंग्स से सक्षम करें",
     "Between": "बीच में",
     "Cancel filter": "फ़िल्टर रद्द करें",
     "Cannot delete system default language: en": "सिस्टम डिफ़ॉल्ट भाषा को हटा नहीं सकता: en",
@@ -25,8 +25,11 @@
     "Cannot save translation file. Please try again": "अनुवाद फ़ाइल को सहेज नहीं सकता। कृपया पुन: प्रयास करें",
     "Cannot update Module. Please delete and re-create": "मॉड्यूल को अपडेट नहीं किया जा सकता। कृपया हटाएँ और पुनः बनाएँ",
     "Change": "बदलें",
+    "Change Password": "पासवर्ड बदलें",
     "Child Table will be shown as Grid in form view": "चाइल्ड टेबल को फॉर्म व्यू में ग्रिड के रूप में दिखाया जाएगा",
     "Configuration": "विन्यास",
+    "Confirm New Password": "पुष्टि नया पासवर्ड",
+    "Confirm New Password field is required": "पुष्टि नया पासवर्ड फ़ील्ड आवश्यक है",
     "Controller Name": "कंट्रलर नाम",
     "Copyright": "कॉपीराइट",
     "Create": "निर्माण",
@@ -34,6 +37,9 @@
     "Create Migration": "प्रवास बनाएँ",
     "Created At": "निर्माण समय",
     "Creating": "निर्माण हो रहा है",
+    "Current Password": "वर्तमान पासवर्ड",
+    "Current Password field is required": "वर्तमान पासवर्ड फ़ील्ड आवश्यक है",
+    "Current Password is invalid": "वर्तमान पासवर्ड अमान्य है",
     "Customization": "अनुकूलन",
     "Dark": "डार्क",
     "Dark Mode": "डार्क मोड",
@@ -68,6 +74,7 @@
     "Form Title": "फॉर्म का शीर्षक",
     "From": "से",
     "Full Name": "पूरा नाम",
+    "Global Settings": "वैश्विक सेटिंग्स",
     "Guest": "अतिथि",
     "Home": "मुख",
     "Home Page": "मुख पृष्ठ",
@@ -108,6 +115,10 @@
     "Name": "नाम",
     "Name of table of your database you want to connect to this Module": "आपके डेटाबेस की टेबल का नाम जिसे आप इस मॉड्यूल से जोड़ना चाहते हैं",
     "New": "नया",
+    "New Password": "नया पासवर्ड",
+    "New Password & Current Password cannot be same": "नया पासवर्ड और वर्तमान पासवर्ड समान नहीं हो सकता",
+    "New Password and Confirm New Password does not match": "नया पासवर्ड और पुष्टि नया पासवर्ड मेल नहीं खाता है",
+    "New Password field is required": "नया पासवर्ड फ़ील्ड आवश्यक है",
     "Next": "अगला",
     "No": "नहीं",
     "No Data": "डेटा उपलब्ध नहीं",
@@ -128,10 +139,13 @@
     "Page": "पृष्ठ",
     "Page Not Found": "पृष्ठ नहीं मिला",
     "Password": "पासवर्ड",
+    "Password has been changed successfully": "पासवर्ड सफलतापूर्वक बदल दिया गया है",
+    "Password should be at least 8 characters including a number, an uppercase letter and a lowercase letter and should not contain any blank spaces": "पासवर्ड में कम से कम 8 अक्षर होने चाहिए, जिसमें एक नंबर, एक अपरकेस अक्षर और एक लोअरकेस अक्षर शामिल हैं और इसमें कोई खाली स्थान नहीं होना चाहिए",
     "Please attach import template to import data": "कृपया डेटा आयात करने के लिए आयात टेम्पलेट जोडे",
     "Please enter": "कृपया दर्ज करें",
     "Please enter two-letter ISO 639-1 code": "कृपया दो-अक्षर ISO 639-1 कोड दर्ज करें",
     "Please enter two-letter ISO 639-1 code from": "कृपया दो-अक्षर ISO 639-1 कोड दर्ज करें",
+    "Please provide Current Password, New Password and Confirm New Password": "कृपया वर्तमान पासवर्ड, नया पासवर्ड और पुष्टि नया पासवर्ड प्रदान करें",
     "Please provide Language, From & To": "कृपया भाषा, से तथा तक प्रदान करें",
     "Please provide Module": "कृपया मॉड्यूल प्रदान करें",
     "Please provide backup filename to delete": "कृपया हटाने के लिए बैकअप फ़ाइल नाम प्रदान करें",
@@ -174,7 +188,7 @@
     "Selected": "चयनित",
     "Separate multiple columns with comma": "कॉमा के साथ कई कॉलम अलग करें",
     "Sequence No": "क्रम संख्या",
-    "Settings": "समायोजन",
+    "Settings": "सेटिंग्स",
     "Should be without spaces and any special characters": "रिक्त स्थान और किसी विशेष वर्ण के बिना होना चाहिए",
     "Show": "प्रदर्शन",
     "Show filters": "फिल्टर दिखाएं",
