added keyboard shortcuts, backups date issue, msgbox UI revamped, replace badge and label with indicator, updated translations

--- a/resources/lang/hi.json
+++ b/resources/lang/hi.json
@@ -27,6 +27,7 @@
     "Change": "बदलें",
     "Change Password": "पासवर्ड बदलें",
     "Child Table will be shown as Grid in form view": "चाइल्ड टेबल को फॉर्म व्यू में ग्रिड के रूप में दिखाया जाएगा",
+    "Clear Cache and Reload": "द्रुतिका साफ़ करें और पुनः लोड करें",
     "Configuration": "विन्यास",
     "Confirm New Password": "पुष्टि नया पासवर्ड",
     "Confirm New Password field is required": "पुष्टि नया पासवर्ड फ़ील्ड आवश्यक है",
@@ -75,6 +76,7 @@
     "From": "से",
     "Full Name": "पूरा नाम",
     "Global Settings": "वैश्विक सेटिंग्स",
+    "Go to Home": "घर जाओ",
     "Guest": "अतिथि",
     "Home": "मुख",
     "Home Page": "मुख पृष्ठ",
@@ -90,6 +92,7 @@
     "Info": "सूचना",
     "Invalid Token or Token Expired": "अमान्य टोकन या टोकन समाप्ति",
     "Is Child Table": "बाल टेबल है",
+    "Keyboard Shortcuts": "कुंजीपटल अल्प मार्ग",
     "Language": "भाषा",
     "Language Details": "भाषा विवरण",
     "Last": "अंतिम",
@@ -135,6 +138,9 @@
     "Off": "बंद",
     "On": "चालू",
     "Only .csv, .xls or .xlsx files are allowed": "केवल .csv, .xls या .xlsx फ़ाइलों की अनुमति है",
+    "Open Profile": "प्रोफ़ाइल खोलें",
+    "Open Settings": "सेटिंग्स खोलें",
+    "Open Universal Search": "यूनिवर्सल खोज खोलें",
     "Owner": "निर्माता",
     "Page": "पृष्ठ",
     "Page Not Found": "पृष्ठ नहीं मिला",
@@ -173,6 +179,7 @@
     "Reports": "रिपोर्ट",
     "Role": "भूमिका",
     "Save": "सहेजें",
+    "Save Record": "रिकॉर्ड सहेजें",
     "Saved": "सहेजा है",
     "Saving": "सहेजा जा रहा है",
     "Search": "खोज",
@@ -191,6 +198,8 @@
     "Settings": "सेटिंग्स",
     "Should be without spaces and any special characters": "रिक्त स्थान और किसी विशेष वर्ण के बिना होना चाहिए",
     "Show": "प्रदर्शन",
+    "Show Keyboard Shortcuts": "कुंजीपटल अल्प मार्ग दिखाएं",
+    "Show Modules": "मॉड्यूल दिखाएं",
     "Show filters": "फिल्टर दिखाएं",
     "Size": "माप",
     "Slug": "स्लग",
