--- a/resources/lang/hi.json
+++ b/resources/lang/hi.json
@@ -29,8 +29,7 @@
     "Child Table will be shown as Grid in form view": "चाइल्ड टेबल को फॉर्म व्यू में ग्रिड के रूप में दिखाया जाएगा",
     "Clear Cache and Reload": "द्रुतिका साफ़ करें और पुनः लोड करें",
     "Configuration": "विन्यास",
-    "Confirm New Password": "पुष्टि नया पासवर्ड",
-    "Confirm New Password field is required": "पुष्टि नया पासवर्ड फ़ील्ड आवश्यक है",
+    "Confirm New Password": "कन्फर्म नया पासवर्ड",
     "Controller Name": "कंट्रलर नाम",
     "Copyright": "कॉपीराइट",
     "Create": "निर्माण",
@@ -39,7 +38,6 @@
     "Created At": "निर्माण समय",
     "Creating": "निर्माण हो रहा है",
     "Current Password": "वर्तमान पासवर्ड",
-    "Current Password field is required": "वर्तमान पासवर्ड फ़ील्ड आवश्यक है",
     "Current Password is invalid": "वर्तमान पासवर्ड अमान्य है",
     "Customization": "अनुकूलन",
     "Dark": "डार्क",
@@ -120,8 +118,7 @@
     "New": "नया",
     "New Password": "नया पासवर्ड",
     "New Password & Current Password cannot be same": "नया पासवर्ड और वर्तमान पासवर्ड समान नहीं हो सकता",
-    "New Password and Confirm New Password does not match": "नया पासवर्ड और पुष्टि नया पासवर्ड मेल नहीं खाता है",
-    "New Password field is required": "नया पासवर्ड फ़ील्ड आवश्यक है",
+    "New Password and Confirm New Password does not match": "नया पासवर्ड और कन्फर्म नया पासवर्ड मेल नहीं खाता है",
     "Next": "अगला",
     "No": "नहीं",
     "No Data": "डेटा उपलब्ध नहीं",
@@ -149,9 +146,12 @@
     "Password should be at least 8 characters including a number, an uppercase letter and a lowercase letter and should not contain any blank spaces": "पासवर्ड में कम से कम 8 अक्षर होने चाहिए, जिसमें एक नंबर, एक अपरकेस अक्षर और एक लोअरकेस अक्षर शामिल हैं और इसमें कोई खाली स्थान नहीं होना चाहिए",
     "Please attach import template to import data": "कृपया डेटा आयात करने के लिए आयात टेम्पलेट जोडे",
     "Please enter": "कृपया दर्ज करें",
+    "Please enter Confirm New Password": "कृपया कन्फर्म नया पासवर्ड दर्ज करें",
+    "Please enter Current Password": "कृपया वर्तमान पासवर्ड दर्ज करें",
+    "Please enter Current Password, New Password and Confirm New Password": "कृपया वर्तमान पासवर्ड, नया पासवर्ड और कन्फर्म नया पासवर्ड दर्ज करें",
+    "Please enter New Password": "कृपया नया पासवर्ड दर्ज करें",
     "Please enter two-letter ISO 639-1 code": "कृपया दो-अक्षर ISO 639-1 कोड दर्ज करें",
     "Please enter two-letter ISO 639-1 code from": "कृपया दो-अक्षर ISO 639-1 कोड दर्ज करें",
-    "Please provide Current Password, New Password and Confirm New Password": "कृपया वर्तमान पासवर्ड, नया पासवर्ड और पुष्टि नया पासवर्ड प्रदान करें",
     "Please provide Language, From & To": "कृपया भाषा, से तथा तक प्रदान करें",
     "Please provide Module": "कृपया मॉड्यूल प्रदान करें",
     "Please provide backup filename to delete": "कृपया हटाने के लिए बैकअप फ़ाइल नाम प्रदान करें",
