development changes as per REST API

--- a/resources/lang/hi.json
+++ b/resources/lang/hi.json
@@ -16,6 +16,7 @@
     "Backup deleted successfully": "बैकअप सफलतापूर्वक हटा दिया गया",
     "Backups": "बैकअप",
     "Backups are not enabled. Please enable it from Settings": "बैकअप सक्षम नहीं हैं। कृपया इसे सेटिंग्स से सक्षम करें",
+    "Banned Until": "तक प्रतिबंधित",
     "Between": "बीच में",
     "Cancel filter": "फ़िल्टर रद्द करें",
     "Cannot delete system default language: en": "सिस्टम डिफ़ॉल्ट भाषा को हटा नहीं सकता: en",
@@ -138,6 +139,7 @@
     "Open Profile": "प्रोफ़ाइल खोलें",
     "Open Settings": "सेटिंग्स खोलें",
     "Open Universal Search": "यूनिवर्सल खोज खोलें",
+    "Other Details": "अन्य जानकारी",
     "Owner": "निर्माता",
     "Page": "पृष्ठ",
     "Page Not Found": "पृष्ठ नहीं मिला",
@@ -158,7 +160,7 @@
     "Please provide backup filename to download": "कृपया डाउनलोड करने के लिए बैकअप फ़ाइल नाम प्रदान करें",
     "Please provide image": "कृपया छवि प्रदान करें",
     "Please provide module data": "कृपया मॉड्यूल डेटा प्रदान करें",
-    "Please provide module, sort field and sort order": "कृपया मॉड्यूल, सॉर्ट फ़ील्ड और सॉर्ट क्रम प्रदान करें",
+    "Please provide sort field and sort order": "कृपया सॉर्ट फ़ील्ड और सॉर्ट क्रम प्रदान करें",
     "Please provide token to verify email": "कृपया ईमेल को सत्यापित करने के लिए टोकन प्रदान करें",
     "Please provide valid Theme i.e. \"light\" or \"dark\"": "कृपया मान्य थीम प्रदान करें अर्थात् \"लाइट\" या \"डार्क\"",
     "Please refresh the page and try again": "पृष्ठ को रीफ्रेश करें और पुन: प्रयास करें",
